# hegemon

./: .gitignore  CMakeLists.txt  README.md  TODO.md  architecture.md
backups/metadata/: backups.json
cmake/modules/: FindMySQL.cmake  FindPQXX.cmake
debian/: control
include/: backup_manager.hpp  cli.hpp  compression.hpp  config.hpp  credential_manager.hpp  restore_manager.hpp
include/error/: DatabaseBackupError.hpp  ErrorUtils.hpp
src/: backup_manager.cpp  backup_manager.hpp  cli.cpp  cli.hpp  compression.cpp  compression.hpp  config.cpp  config.hpp  credential_manager.cpp  db-backup  db_connection.cpp  db_connection.hpp  logging.cpp  logging.hpp  main.cpp  notifications.cpp  notifications.hpp  restore_manager.cpp  restore_manager.hpp  scheduling.cpp  scheduling.hpp  storage.cpp  storage.hpp
src/db/: mongodb_connection.cpp  mongodb_connection.hpp  mysql_connection.cpp  mysql_connection.hpp  postgresql_connection.cpp  postgresql_connection.hpp  sqlite_connection.cpp  sqlite_connection.hpp
src/error/: ErrorUtils.cpp
src/mocks/: mock_db_connection.hpp
tests/: CMakeLists.txt  test_backup_manager.cpp  test_cli.cpp  test_compression.cpp  test_config.cpp  test_restore_manager.cpp  test_scheduling.cpp
tests/db/: test_db_connections.cpp
tests/mocks/: mock_db_connection.hpp
